# InverseCSG

./: .gitignore  CLAUDE.md  PLAN.md  README.md  helper.py  install.py  main.py  point_cloud_seg.py  primitive_to_sketch.py  run_tests.py  sketch_pipeline.py  surface_primitive_to_sketch.py  visualize_point_cloud.py
cpp/: CMakeLists.txt  test.py
cpp/src/ransac/: cgal_ransac_wrapper.cpp
cpp/src/test/: test_initialize_surface_parameters.cpp
